...
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/bg_play"
                    android:src="@drawable/ic_play_arrow_black_24dp"
                    android:tint="@color/grey_50"
                    app:layout_constraintBottom_toTopOf="@id/titlevideo"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/titlevideo"
                    android:layout_width="wrap_content"
...
                    android:ellipsize="end"
                    android:gravity="left"
                    android:maxLines="2"
                    android:text="Murder On The Oriented "
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/grey_20"
                    app:layout_constraintBottom_toTopOf="@id/ratingbar"
                    app:layout_constraintStart_toStartOf="@id/ratingbar" />


                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/ratingbar"
                    style="?android:attr/ratingBarStyleSmall"
...
                    android:theme="@style/RatingBar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:maxLines="1"
                    android:text="145"
...
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_40"
                app:layout_constraintLeft_toRightOf="@id/card1"
                app:layout_constraintTop_toBottomOf="@id/lv1" />

            <TextView
                android:id="@+id/titledesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_xmlarge"
                android:ellipsize="end"
                android:singleLine="true"
...
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_40"
                app:layout_constraintLeft_toRightOf="@id/card1"
                app:layout_constraintTop_toBottomOf="@id/lttitle" />

            <TextView
                android:id="@+id/RuningTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:maxLines="1"
                android:text="Who He Should Be"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
...
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_40"
                app:layout_constraintLeft_toRightOf="@id/card1"
                app:layout_constraintTop_toBottomOf="@id/ltdurasi" />

            <TextView
                android:id="@+id/ReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:maxLines="1"
                android:text="Who He Should Be"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
...
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_40"
                app:layout_constraintLeft_toRightOf="@id/card1"
                app:layout_constraintTop_toBottomOf="@id/ltrilis" />

            <TextView
                android:id="@+id/director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:maxLines="1"
                android:text="Who He Should Be"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
...
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_40"
                app:layout_constraintLeft_toRightOf="@id/card1"
                app:layout_constraintTop_toBottomOf="@id/ltsutradara" />

            <TextView
                android:id="@+id/writer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:maxLines="1"
                android:text="Who He Should Be"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
...
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/grey_10"
                app:layout_constraintStart_toStartOf="@id/lv_2"
                app:layout_constraintTop_toBottomOf="@id/lv_2" />

            <TextView
                android:id="@+id/discription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_mxlarge"
                android:text="Duis tellus metus, elementum a lectus id, aliquet interdum mauris. Nam bibendum efficitur sollicitudin. Proin eleifend libero velit, nec fringilla dolor finibus quis. nMorbi eu libero pellentesque, rutrum metus quis, blandit est. Fusce bibendum accumsan nisi vulputate feugiat. In fermentum laoreet euismod. Praesent sem nisl, facilisis eget odio at, rhoncus scelerisque
        \n\nNulla id lectus metus. Maecenas a lorem in odio auctor facilisis non vitae nunc. Sed malesuada volutpat massa. Praesent sit amet lacinia augue, mollis tempor dolor."
...
